fix nav-view items alignment

--- a/src/sass/component/_all.sass
+++ b/src/sass/component/_all.sass
@@ -70,6 +70,7 @@ button,
     padding-left: calc(1rem + 8px)
   a
     border-left: 8px solid transparent
+    border-right: 8px solid transparent
     &.is-active
       border-left-color: $primary
       background-color: transparent
